comment function complete